--- a/static/sass/i4p_base/superfish_main_menu.scss
+++ b/static/sass/i4p_base/superfish_main_menu.scss
@@ -19,7 +19,6 @@ $bordercolor:$greymenu;
     padding: 0;
     list-style: none; 
   }
-  line-height: 1.0;
   ul {
     position: absolute;
     top: -999em;
